[package]
name = "tc37x-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
tc37x-pac = { git = "ssh://git@git.bwlocal.it/bw-rust/tc37x-pac.git", branch = "develop", features = ["scu"] }
